gitops/clusters/TalosCluster/configs/Cilium/CiliumGateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: main-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: main-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            expose-apps: "true"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.firmz.xyz"
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            expose-apps: "true"
    tls: # to fix later
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: firmz-xyz-wildcard-tls
